public static class StringData
{
    // Tags
    public static string UntaggedTag = "Untagged";
    public static string PlayerTag = "Player";
    public static string EnemyTag = "Enemy";

    // Animations
    public static string Speed = "speed";
    public static string IsSprinting = "isSprinting";
    public static string IsGrounded = "isGrounded";
    public static string IsDiving = "isDiving";
    public static string IsDead = "isDead";
    public static string IsKnockedBack = "isKnockedBack";
    public static string IsInteracting = "isInteracting";
    public static string IsBasicAttacking = "isBasicAttacking";
    public static string IsUsingSkill = "isUsingSkill";
    public static string BasicAttack = "BasicAttack";
    public static string AttackSpeed = "attackSpeed";
    public static string BasicAttackTwo = "BasicAttackTwo";
    public static string BasicAttackThree = "BasicAttackThree";
    public static string CanBasicAttackTwo = "canBasicAttackTwo";
    public static string CanBasicAttackThree = "canBasicAttackThree";
    public static string Idle = "Idle";
    public static string Jump = "Jump";
    public static string Dive = "Dive";
    public static string Hit = "Hit";
    public static string Death = "Death";
}
