public static class StringData
{
    // Tags
    public static string UntaggedTag = "Untagged";
    public static string PlayerTag = "Player";
    public static string EnemyTag = "Enemy";

    // Animations
    public static string Speed = "speed";
    public static string IsSprinting = "isSprinting";
    public static string IsGrounded = "isGrounded";
    public static string IsDiving = "isDiving";
    public static string IsDead = "isDead";
    public static string IsKnockedBack = "isKnockedBack";
    public static string IsInteracting = "isInteracting";
    public static string IsBasicAttacking = "isBasicAttacking";
    public static string IsSkilling = "isSkilling";
    public static string IsUsingSkill = "isUsingSkill";
    public static string BasicAttack = "BasicAttack";
    public static string AttackSpeed = "attackSpeed";
    public static string BasicAttackTwo = "BasicAttackTwo";
    public static string BasicAttackThree = "BasicAttackThree";
    public static string CanBasicAttackTwo = "canBasicAttackTwo";
    public static string CanBasicAttackThree = "canBasicAttackThree";
    public static string Idle = "Idle";
    public static string Jump = "Jump";
    public static string Dive = "Dive";
    public static string Hit = "Hit";
    public static string Death = "Death";

    // Method Names
    public static string TempStatModifierHandler = "TempStatModifierHandler";

    // General GameObjects
    public static string StrafePoint = "Strafe Point";

    // Database Keys
    public static string Username = "Username"; 
    public static string RoundNumberReached = "RoundNumberReached"; 
    public static string SessionLength = "SessionLength"; 
    public static string DamageTaken = "DamageTaken"; 
    public static string TotalScore = "TotalScore"; 
    public static string GoldEarned = "GoldEarned"; 
    public static string MobsDefeatedCount = "MobsDefeatedCount"; 
    public static string BossesDefeatedCount = "BossesDefeatedCount"; 
    public static string MysticDungeonsEnteredCount = "MysticDungeonsEnteredCount"; 
    public static string BloodLine = "BloodLine"; 
    public static string SkillUsed = "SkillUsed"; 
    public static string Attack = "Attack"; 
    public static string Ability = "Ability"; 
    public static string Health = "Health";
    public static string EffectsObtained = "EffectsObtained";

  // Database Collections/Documents
  public static string MatchHistory = "MatchHistory";
  public static string Leaderboards = "Leaderboards";
  public static string Users = "Users";
}
